Make eventStatis better on safari(sub-pixel issue)

--- a/themes/default.css
+++ b/themes/default.css
@@ -325,14 +325,12 @@
     width: 100%;
     height: 80px;
 }
-#root-id .octocard-m-eventsStatis a {
+#root-id .octocard-m-eventsStatis-bar {
     position: relative;
     float: right;
-    margin-left: 1px;
-    width: 4px;
     height: 100%;
 }
-#root-id .octocard-m-eventsStatis a div {
+#root-id .octocard-m-eventsStatis-bar div {
     position: absolute;
     bottom: 0;
     left: 0;
